--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <button class="nav-btn active" data-page="home">
                     <i class="fas fa-home"></i> Home
                 </button>
-                <button class="nav-btn" data-page="admin" id="adminBtn">
-                    <i class="fas fa-cog"></i> Admin
+                <button class="nav-btn" data-page="admin">
+                    <i class="fas fa-cog"></i> Manage Data
                 </button>
             </div>
         </div>
@@ -30,7 +30,16 @@
         <div id="homePage" class="page active">
             <div class="hero-section">
                 <h1>Lab & Classroom Availability</h1>
-                <p>Check real-time availability of labs and classrooms</p>
+                <p>Check real-time availability of labs and classrooms for your events</p>
+                <div class="instructions">
+                    <h3>How to Use:</h3>
+                    <ul>
+                        <li><strong>Check Availability:</strong> Select location, day, and time slot to see if it's free</li>
+                        <li><strong>Find by Capacity:</strong> Enter minimum capacity to find suitable labs</li>
+                        <li><strong>Search Faculty:</strong> Enter faculty name to see their schedule</li>
+                        <li><strong>Filter Options:</strong> Use day/time filters to find available slots</li>
+                    </ul>
+                </div>
             </div>
 
             <div class="search-container">
@@ -38,6 +47,7 @@
                     <!-- Location Availability Check -->
                     <div class="search-card">
                         <h3><i class="fas fa-map-marker-alt"></i> Check Location Availability</h3>
+                        <p class="card-description">Select a specific location, day, and time slot to check availability</p>
                         <form id="availabilityForm">
                             <select id="locationSelect" required>
                                 <option value="">Select Location</option>
@@ -53,13 +63,9 @@
                             </select>
                             <select id="timeSlotSelect" required>
                                 <option value="">Select Time Slot</option>
-                                <option value="9:00-10:00">9:00-10:00</option>
-                                <option value="10:00-11:00">10:00-11:00</option>
-                                <option value="11:00-12:00">11:00-12:00</option>
-                                <option value="12:00-13:00">12:00-13:00</option>
-                                <option value="14:00-15:00">14:00-15:00</option>
-                                <option value="15:00-16:00">15:00-16:00</option>
-                                <option value="16:00-17:00">16:00-17:00</option>
+                                <option value="Slot 1">Slot 1</option>
+                                <option value="Slot 2">Slot 2</option>
+                                <option value="Slot 3">Slot 3</option>
                             </select>
                             <button type="submit">Check Availability</button>
                         </form>
@@ -69,8 +75,9 @@
                     <!-- Capacity Search -->
                     <div class="search-card">
                         <h3><i class="fas fa-users"></i> Find by Capacity</h3>
+                        <p class="card-description">Enter minimum capacity required to find suitable locations</p>
                         <form id="capacityForm">
-                            <input type="number" id="capacityInput" placeholder="Minimum capacity" min="1" required>
+                            <input type="number" id="capacityInput" placeholder="Minimum capacity (e.g., 25)" min="1" required>
                             <button type="submit">Find Locations</button>
                         </form>
                         <div id="capacityResult" class="result"></div>
@@ -79,9 +86,10 @@
                     <!-- Faculty Search -->
                     <div class="search-card">
                         <h3><i class="fas fa-user-tie"></i> Search by Faculty</h3>
+                        <p class="card-description">Enter faculty name to see their complete schedule</p>
                         <form id="facultyForm">
-                            <input type="text" id="facultyInput" placeholder="Faculty name" required>
-                            <button type="submit">Search</button>
+                            <input type="text" id="facultyInput" placeholder="Faculty name (e.g., Dr. Smith)" required>
+                            <button type="submit">Search Schedule</button>
                         </form>
                         <div id="facultyResult" class="result"></div>
                     </div>
@@ -89,6 +97,7 @@
                     <!-- Day/Time Filters -->
                     <div class="search-card">
                         <h3><i class="fas fa-calendar"></i> Filter by Day/Time</h3>
+                        <p class="card-description">Filter available locations by specific day or time slot</p>
                         <div class="filter-buttons">
                             <select id="dayFilter">
                                 <option value="">Filter by Day</option>
@@ -100,14 +109,10 @@
                                 <option value="Saturday">Saturday</option>
                             </select>
                             <select id="timeFilter">
-                                <option value="">Filter by Time</option>
-                                <option value="9:00-10:00">9:00-10:00</option>
-                                <option value="10:00-11:00">10:00-11:00</option>
-                                <option value="11:00-12:00">11:00-12:00</option>
-                                <option value="12:00-13:00">12:00-13:00</option>
-                                <option value="14:00-15:00">14:00-15:00</option>
-                                <option value="15:00-16:00">15:00-16:00</option>
-                                <option value="16:00-17:00">16:00-17:00</option>
+                                <option value="">Filter by Time Slot</option>
+                                <option value="Slot 1">Slot 1</option>
+                                <option value="Slot 2">Slot 2</option>
+                                <option value="Slot 3">Slot 3</option>
                             </select>
                         </div>
                         <div id="filterResult" class="result"></div>
@@ -117,66 +122,79 @@
 
             <!-- Timetable Display -->
             <div class="timetable-section">
-                <h2>Current Timetable</h2>
+                <h2>Complete Lab Schedule</h2>
+                <p class="section-description">View the complete timetable for all labs and classrooms</p>
                 <button id="loadTimetable" class="load-btn">Load Full Timetable</button>
                 <div id="timetableContainer" class="timetable-container"></div>
             </div>
         </div>
 
-        <!-- Admin Page -->
+        <!-- Admin/Manage Data Page -->
         <div id="adminPage" class="page">
             <div class="admin-header">
-                <h1>Admin Panel</h1>
-                <div class="admin-auth" id="adminAuth">
-                    <input type="password" id="adminPassword" placeholder="Enter admin password">
-                    <button id="loginBtn">Login</button>
-                </div>
-                <div class="admin-controls" id="adminControls" style="display: none;">
-                    <button id="logoutBtn">Logout</button>
-                </div>
+                <h1>Manage Lab Schedule Data</h1>
+                <p>Add, edit, or delete lab schedule entries</p>
             </div>
 
-            <div id="adminContent" class="admin-content" style="display: none;">
+            <div class="admin-content">
                 <!-- Add New Entry -->
                 <div class="admin-section">
-                    <h3>Add New Entry</h3>
+                    <h3><i class="fas fa-plus-circle"></i> Add New Schedule Entry</h3>
+                    <p class="section-description">Add a new lab/classroom schedule entry to the system</p>
                     <form id="addEntryForm" class="admin-form">
                         <div class="form-row">
-                            <input type="text" id="addLocation" placeholder="Location" required>
-                            <select id="addDay" required>
-                                <option value="">Select Day</option>
-                                <option value="Monday">Monday</option>
-                                <option value="Tuesday">Tuesday</option>
-                                <option value="Wednesday">Wednesday</option>
-                                <option value="Thursday">Thursday</option>
-                                <option value="Friday">Friday</option>
-                                <option value="Saturday">Saturday</option>
-                            </select>
+                            <div class="form-group">
+                                <label for="addLocation">Location/Lab Name</label>
+                                <input type="text" id="addLocation" placeholder="e.g., Computer Lab" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="addDay">Day</label>
+                                <select id="addDay" required>
+                                    <option value="">Select Day</option>
+                                    <option value="Monday">Monday</option>
+                                    <option value="Tuesday">Tuesday</option>
+                                    <option value="Wednesday">Wednesday</option>
+                                    <option value="Thursday">Thursday</option>
+                                    <option value="Friday">Friday</option>
+                                    <option value="Saturday">Saturday</option>
+                                </select>
+                            </div>
                         </div>
                         <div class="form-row">
-                            <select id="addTimeSlot" required>
-                                <option value="">Select Time Slot</option>
-                                <option value="9:00-10:00">9:00-10:00</option>
-                                <option value="10:00-11:00">10:00-11:00</option>
-                                <option value="11:00-12:00">11:00-12:00</option>
-                                <option value="12:00-13:00">12:00-13:00</option>
-                                <option value="14:00-15:00">14:00-15:00</option>
-                                <option value="15:00-16:00">15:00-16:00</option>
-                                <option value="16:00-17:00">16:00-17:00</option>
-                            </select>
-                            <input type="text" id="addFaculty" placeholder="Faculty (or 'Free')" required>
+                            <div class="form-group">
+                                <label for="addTimeSlot">Time Slot</label>
+                                <select id="addTimeSlot" required>
+                                    <option value="">Select Time Slot</option>
+                                    <option value="Slot 1">Slot 1</option>
+                                    <option value="Slot 2">Slot 2</option>
+                                    <option value="Slot 3">Slot 3</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="addFaculty">Faculty Name</label>
+                                <input type="text" id="addFaculty" placeholder="Faculty name or 'Free'" required>
+                            </div>
                         </div>
                         <div class="form-row">
-                            <input type="text" id="addBatch" placeholder="Batch (optional)">
-                            <input type="number" id="addCapacity" placeholder="Capacity" min="1" required>
+                            <div class="form-group">
+                                <label for="addBatch">Batch (Optional)</label>
+                                <input type="text" id="addBatch" placeholder="e.g., CS-A, PHY-B">
+                            </div>
+                            <div class="form-group">
+                                <label for="addCapacity">Capacity</label>
+                                <input type="number" id="addCapacity" placeholder="Room capacity" min="1" required>
+                            </div>
                         </div>
-                        <button type="submit">Add Entry</button>
+                        <button type="submit" class="submit-btn">
+                            <i class="fas fa-plus"></i> Add Entry
+                        </button>
                     </form>
                 </div>
 
                 <!-- Manage Existing Data -->
                 <div class="admin-section">
-                    <h3>Manage Data</h3>
+                    <h3><i class="fas fa-table"></i> Manage Existing Data</h3>
+                    <p class="section-description">View, edit, or delete existing schedule entries</p>
                     <button id="loadDataBtn" class="load-btn">Load All Data</button>
                     <div id="dataTable" class="data-table"></div>
                 </div>
